# brator

./: .gitignore
server/: .coveragerc  .gitignore  Dockerfile  manage.py  pyproject.toml  pytest.ini
server/brator/: asgi.py  asgi_test.py  exception_handlers.py  renderer.py  settings.py  settings_test.py  urls.py  wsgi.py  wsgi_test.py
server/brator/quiz/: __init__.py  apitype.py  apps.py  exceptions.py  forms.py  logic.py  models.py  models_test.py  signals.py  stats.py  test_logic.py  test_stats.py  tests.py  testutils.py  urls.py
server/brator/quiz/migrations/: 0001_initial.py  0002_auto_20210311_1823.py  0003_auto_20210311_1826.py  0004_auto_20210311_2028.py  0005_challenge_uid.py  0006_auto_20210311_2234.py  0007_challenge_active.py  0008_auto_20210311_2325.py  0009_fact_version_hash.py  0010_auto_20210314_2109.py  0011_auto_20210317_1924.py  0012_summaryscore_user.py  0013_auto_20210317_2149.py  0014_challengefeedback.py  0015_auto_20210323_2321.py  0016_auto_20210324_2258.py
server/brator/quiz/static/: quiz.scss
server/brator/quiz/templates/: base.html
server/brator/quiz/templates/quiz/: account.html  boolean_challenge.html  challenge.html  challenge_base.html  challenge_core.html  deleteme.html  eval.html  evalchart.html  (+7 more)
server/brator/quiz/templatetags/: numberformat.py  test_numberformat.py
server/brator/quiz/views/: api.py  test_api.py  test_web.py  web.py  web_urls.py
server/brator/users/: apps.py  urls.py  views.py
server/quiz/: exceptions.py  logic.py  models.py  serializers.py  urls.py  views.py
server/tests/: test_brator_server.py
(+17 files in other folders)
